# call_on_stack

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: clang-x86_64-i386-cross.cmake  gcc-x86_64-i386-cross.cmake
include/: call_on_stack.h
src/: call_on_stack-clang-gcc.S  call_on_stack-clang-gcc.s  call_on_stack-msvc-i386.asm  call_on_stack-msvc-win32.asm  call_on_stack-msvc-win64.asm  call_on_stack.c  call_on_stack.s
test/: CMakeLists.txt  check_address.c  check_chain_call.c  check_setjmp.c  check_skip_jump.c
